[project]
name = "research-template"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "tubo213", email = "hoge@gmail.com" }]
dependencies = [
    "numpy>=1.24.4",
    "joblib>=1.3.1",
    "hydra-core>=1.3.2",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "pytorch-lightning>=2.0.6",
    "polars>=0.18.9",
    "scikit-learn>=1.3.0",
    "loguru>=0.7.2",
    "torch==2.1.1+cu121",
    "tqdm>=4.64.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.4",
    "seaborn>=0.13.2",
    "japanize_matplotlib>=1.1.3",
    "wandb>=0.16.6",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []

[tool.ruff]
include = ["*.ipynb", "*.py"]
line-length = 99


[tool.hatch.metadata]
allow-direct-references = true
